--- a/zzzDeArchive-WinForms/Form1.resx
+++ b/zzzDeArchive-WinForms/Form1.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="colOffset.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colSize.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colPath.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <data name="label8.Text" xml:space="preserve">
     <value>Choose a path and filename of your zzz file.
 
@@ -126,8 +135,5 @@ If not the temp folder will open and the file will be located in there.
 
 If possible this will overwrite the existing files.
 </value>
-  </data>
-  <data name="Form1_btnExecuteWrite_Click_Path_Too_Long_Exception" xml:space="preserve">
-    <value>Path Too Long Exception</value>
   </data>
 </root>
